# OpenGLTrial

./: CMakeLists.txt  Wahadlo.h  Wahadlo2Niezal.h  main.cpp
